# DevFlow

./: pyproject.toml  requirements.txt
devflow/: cli.py  main.py
devflow/core/: automations.py  exceptions.py  executor.py  models.py
devflow/storage/: base.py  json_storage.py
devflow/ui/: app.py
