[tool.poetry]
name = "devflow"
version = "0.1.0"
description = "A TUI for automating repetitive development tasks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "devflow"}]

[tool.poetry.dependencies]
python = "^3.8"
textual = "^0.45.0"
pydantic = "^2.5.0"
rich = "^13.7.0"
typer = "^0.9.0"
keyring = "^24.3.0"
platformdirs = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
devflow = "devflow.main:app"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
